objects/Partner_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click the magnifying glass to look up an account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Roles</relationshipLabel>
        <relationshipName>Partner_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Percent__c</fullName>
        <inlineHelpText>The percentage of this opportunity allocated to this partner.</inlineHelpText>
        <label>Allocation Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>Click the magnifying glass to look up an Opportunity.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Roles</relationshipLabel>
        <relationshipName>Partner_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Partner Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_have_Account</fullName>
        <active>true</active>
        <description>Will not save if Account is not Populated.</description>
        <errorConditionFormula>Account__c = NULL</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Please enter the Partner Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_Opportunity</fullName>
        <active>true</active>
        <description>Will not save if Opportunity is not Populated.</description>
        <errorConditionFormula>Opportunity__c  = NULL</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Please enter the Opportunity for this Partner Role.</errorMessage>
    </validationRules>
</CustomObject>